@@ -26,6 +26,7 @@
 package tf.gpx.edit.helper;
 
 import com.hs.gpxparser.modal.Extension;
+import com.hs.gpxparser.modal.GPX;
 import com.hs.gpxparser.modal.Route;
 import com.hs.gpxparser.modal.TrackSegment;
 import com.hs.gpxparser.modal.Waypoint;
@@ -34,8 +35,9 @@ import java.util.Comparator;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+import java.util.Set;
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import javafx.geometry.BoundingBox;
 import static tf.gpx.edit.helper.GPXLineItem.filterGPXWaypointsInBoundingBox;
 
@@ -46,7 +48,7 @@ import static tf.gpx.edit.helper.GPXLineItem.filterGPXWaypointsInBoundingBox;
 public class GPXRoute extends GPXMeasurable {
     private GPXFile myGPXFile;
     private Route myRoute;
-    private LinkedList<GPXWaypoint> myGPXWaypoints = new LinkedList<>();
+    private final ObservableList<GPXWaypoint> myGPXWaypoints = FXCollections.observableList(new LinkedList<>());
     
     private Double myLength;
     private Double myCumulativeAscent;
@@ -58,6 +60,23 @@ public class GPXRoute extends GPXMeasurable {
         super(GPXLineItemType.GPXRoute);
     }
     
+    // constructor for "manually created routes"
+    public GPXRoute(final GPXFile gpxFile) {
+        super(GPXLineItemType.GPXRoute);
+
+        myGPXFile = gpxFile;
+
+        // create empty route
+        myRoute = new Route();
+        
+        // if possible add route to parent class
+        Extension content = gpxFile.getContent();
+        if (content instanceof GPX) {
+            ((GPX) content).addRoute(myRoute);
+        }
+    }
+    
+    // constructor for routes from gpx parser
     public GPXRoute(final GPXFile gpxFile, final Route route) {
         super(GPXLineItemType.GPXRoute);
         
@@ -73,6 +92,8 @@ public class GPXRoute extends GPXMeasurable {
 
             updatePrevNextGPXWaypoints();
         }
+        
+        myGPXWaypoints.addListener(getListChangeListener());
     }
 
     protected Route getRoute() {
@@ -93,8 +114,8 @@ public class GPXRoute extends GPXMeasurable {
     }
 
     @Override
-    public List<GPXLineItem> getChildren() {
-        return new ArrayList<>(myGPXWaypoints);
+    public ObservableList<GPXWaypoint> getChildren() {
+        return myGPXWaypoints;
     }
     
     @Override
@@ -107,17 +128,6 @@ public class GPXRoute extends GPXMeasurable {
         myGPXWaypoints.clear();
         myGPXWaypoints.addAll(gpxWaypoints);
         
-        AtomicInteger counter = new AtomicInteger(0);
-        final List<Waypoint> waypoints = gpxWaypoints.stream().
-                map((GPXWaypoint child) -> {
-                    child.setNumber(counter.getAndIncrement());
-                    return child.getWaypoint();
-                }).collect(Collectors.toList());
-        myRoute.setRoutePoints(new ArrayList<>(waypoints));
-        assert (myGPXWaypoints.size() == myRoute.getRoutePoints().size());
-
-        updatePrevNextGPXWaypoints();
-
         // reset cached values
         myLength = null;
         myCumulativeAscent = null;
@@ -137,7 +147,7 @@ public class GPXRoute extends GPXMeasurable {
                 gpxWaypoint.setPrevGPXWaypoint(prevGPXWaypoint);
                 prevGPXWaypoint = gpxWaypoint;
             }
-            myGPXWaypoints.getLast().setNextGPXWaypoint(null);
+            myGPXWaypoints.get(myGPXWaypoints.size()-1).setNextGPXWaypoint(null);
         }
     }
     
@@ -182,22 +192,27 @@ public class GPXRoute extends GPXMeasurable {
     }
 
     @Override
-    public List<GPXTrack> getGPXTracks() {
-        List<GPXTrack> result = new ArrayList<>();
+    public ObservableList<GPXTrack> getGPXTracks() {
+        ObservableList<GPXTrack> result = FXCollections.observableArrayList();
         return result;
     }
 
     @Override
-    public List<GPXTrackSegment> getGPXTrackSegments() {
-        List<GPXTrackSegment> result = new ArrayList<>();
+    public ObservableList<GPXTrackSegment> getGPXTrackSegments() {
+        ObservableList<GPXTrackSegment> result = FXCollections.observableArrayList();
         return result;
     }
 
     @Override
-    public List<GPXRoute> getGPXRoutes() {
-        List<GPXRoute> result = new ArrayList<>();
+    public ObservableList<GPXRoute> getGPXRoutes() {
+        ObservableList<GPXRoute> result = FXCollections.observableArrayList();
         result.add(this);
         return result;
+    }
+
+    @Override
+    public ObservableList<GPXWaypoint> getGPXWaypoints() {
+        return myGPXWaypoints;
     }
     
     @Override
@@ -206,20 +221,17 @@ public class GPXRoute extends GPXMeasurable {
     }
 
     @Override
-    public List<GPXWaypoint> getGPXWaypoints(final GPXLineItemType itemType) {
-        // return copy of list
-        List<GPXWaypoint> result = new ArrayList<>();
+    public ObservableList<GPXWaypoint> getCombinedGPXWaypoints(final GPXLineItemType itemType) {
+        ObservableList<GPXWaypoint> result = FXCollections.observableArrayList();
         if (itemType == null || itemType.equals(GPXLineItemType.GPXRoute)) {
-            result = myGPXWaypoints.stream().collect(Collectors.toList());
+            result = myGPXWaypoints;
         }
         return result;
     }
 
     @Override
     public List<GPXWaypoint> getGPXWaypointsInBoundingBox(final BoundingBox boundingBox) {
-        List<GPXWaypoint> result = new ArrayList<>();
-        result = filterGPXWaypointsInBoundingBox(myGPXWaypoints, boundingBox);
-        return result;
+        return filterGPXWaypointsInBoundingBox(myGPXWaypoints, boundingBox);
     }
 
     /**
@@ -382,5 +394,19 @@ public class GPXRoute extends GPXMeasurable {
     @Override
     protected void visitMe(final IGPXLineItemVisitor visitor) {
         visitor.visitGPXRoute(this);
+    }
+
+    @Override
+    public void updateListValues(ObservableList list) {
+        if (myGPXWaypoints.equals(list)) {
+            myGPXWaypoints.stream().forEach((t) -> {
+                t.setParent(this);
+            });
+            
+            final Set<Waypoint> waypoints = numberExtensions(myGPXWaypoints);
+            myRoute.setRoutePoints(new ArrayList<>(waypoints));
+
+            updatePrevNextGPXWaypoints();
+        }
     }
 }
